# miner

./: CMakeLists.txt  README.md  main.cpp  merkle.hpp  midstate.hpp  nonce.hpp
